# ctr-adv-project

./: .gitignore  Dockerfile  README.md  ctr_model.pkl  docker-compose.yml  pyproject.toml
ctr_catboost/: ctr_catboost.py  ctr_catboost_kfold.py
ctr_xgboost/: click_through_rate_prediction.ipynb  ctr_xgboost.ipynb  ctr_xgboost.py  time_feature.py
notebook/: ctr-pred-pytorch.ipynb  ctr-prediction-classification.ipynb
src/: __init__.py  api.py  cli.py  config.py  inference.py  logging_utils.py  main.py  model.py  preprocessing.py  trainer.py
src/web/: index.html
src_xgboost/: __init__.py  config.py  dataload.py  features.py  preprocess.py  train_xgb_cv.py  train_xgb_full.py  utils.py
tests/: test_api.py  test_cli.py  test_config.py  test_inference.py  test_model.py  test_preprocessing.py  test_trainer.py
web/: index.html  package-lock.json  package.json
web-ui/: vite.config.js
web-ui/src/: App.jsx  styles.css
web/src/: App.jsx  styles.css
