[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ctr-adv-project"
version = "0.1.0"
description = "CTR prediction training and inference pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.2.2",
  "pandas==2.2.3",
  "scikit-learn==1.6.1",
  "torch==2.5.1",
  "joblib==1.4.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.9.2",
  "mypy==1.14.1",
]
api = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.5",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
files = ["src", "tests"]
